issue450/test_einsum_sum_1.mlir.log
within split at ./issue450/test_einsum_sum_1.mlir.decomposed.mlir:1 offset :8:10: error: failed to legalize operation 'torch.aten.sum.dim_IntList' that was explicitly marked illegal
    %1 = torch.aten.sum.dim_IntList %arg0, %0, %false, %none : !torch.vtensor<[3,4],f64>, !torch.list<int>, !torch.bool, !torch.none -> !torch.vtensor<*,f64>
         ^
within split at ./issue450/test_einsum_sum_1.mlir.decomposed.mlir:1 offset :8:10: note: see current operation: %5 = "torch.aten.sum.dim_IntList"(%arg0, %4, %2, %1) : (!torch.vtensor<[3,4],f64>, !torch.list<int>, !torch.bool, !torch.none) -> !torch.vtensor<*,f64>
